--- a/src/App.css
+++ b/src/App.css
@@ -222,7 +222,7 @@ button {
 .hero {
   padding-top: 120px;
   padding-bottom: 230px;
-  background-image: url('../images/heroLeftDots1.png'), url('../images/herorightDot.png');
+  background-image: url('./assets/heroLeftDots1.png'), url('./assets/herorightDot.png');
   background-position: top 23% left, top 17% right;
   background-repeat: no-repeat;
   position: relative;
@@ -326,14 +326,14 @@ button {
 }
 
 .kickStart {
-  background-image: url("../images/bgPlus.png");
+  background-image: url("./assets/bgPlus.png");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 .kickStartTop {
-  background-image: url("../images/elementGlobe.png");
+  background-image: url("./assets/elementGlobe.png");
   background-position: center center;
   background-repeat: no-repeat;
   height: 404px;
@@ -450,7 +450,7 @@ button {
 
 
 .lineLeftBg {
-  background-image: url("../images/line409.png");
+  background-image: url("./assets/line409.png");
   background-repeat: no-repeat;
   background-position: bottom 62% left;
   background-size: contain;
@@ -458,7 +458,7 @@ button {
 }
 
 .lineRightBg {
-  background-image: url("../images/lineRightBg.png");
+  background-image: url("./assets/lineRightBg.png");
   background-repeat: no-repeat;
   background-position: bottom;
   background-size: contain;
@@ -516,14 +516,14 @@ button {
 }
 
 .bgRightDot {
-  background-image: url('../images/leftTop.png'), url('../images/rightTop.png'), url('../images/rightBottom.png'), url('../images/leftbottom.png'), url("../images/elementSpaceControls.png");
+  background-image: url('./assets/leftTop.png'), url('./assets/rightTop.png'), url('./assets/rightBottom.png'), url('./assets/leftbottom.png'), url("./assets/elementSpaceControls.png");
   background-position: top left, top right, bottom right, bottom left, center right;
   background-repeat: no-repeat;
   padding: 65px;
 }
 
 .prizeLeft {
-  background-image: url('../images/leftTop.png'), url('../images/rightTop.png'), url('../images/rightBottom.png'), url('../images/leftbottom.png'), url('../images/prizeLeftLine.png');
+  background-image: url('./assets/leftTop.png'), url('./assets/rightTop.png'), url('./assets/rightBottom.png'), url('./assets/leftbottom.png'), url('./assets/prizeLeftLine.png');
   background-position: top left, top right, bottom right, bottom left, center left;
   background-repeat: no-repeat;
   padding: 65px 40px 72px 85px;
@@ -603,7 +603,7 @@ button {
 .purpleGlow {
   position: relative;
   z-index: 99999;
-  background-image: url('../images/leftTop.png'), url('../images/rightTop.png'), url('../images/rightBottom.png'), url('../images/leftbottom.png'), url('../images/awardRightLine.png');
+  background-image: url('./assets/leftTop.png'), url('./assets/rightTop.png'), url('./assets/rightBottom.png'), url('./assets/leftbottom.png'), url('./assets/awardRightLine.png');
   background-position: top left, top right, bottom right, bottom left, center right;
   background-repeat: no-repeat;
   padding: 65px;
@@ -650,7 +650,7 @@ button {
 }
 
 .bgGlow .row {
-  background-image: url('../images/prizeright.png');
+  background-image: url('./assets/prizeright.png');
   background-position: center left 42%;
   background-repeat: no-repeat;
 }
