--- a/src/App.css
+++ b/src/App.css
@@ -203,6 +203,7 @@ button {
   align-items: center;
   gap: 9px;
   margin-bottom: 56px;
+  font-family: "Blender Pro";
 }
 
 .sec_title span {
@@ -217,7 +218,17 @@ button {
 }
 
 
+.bannerContainer {
+  position: relative;
+}
 
+.bannerVideo {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  object-fit: cover;
+}
 
 .hero {
   padding-top: 120px;
@@ -227,9 +238,6 @@ button {
   background-repeat: no-repeat;
   position: relative;
 }
-
-
-
 
 .heroInner {
   max-width: 800px;
@@ -387,9 +395,6 @@ button {
   position: relative;
   background: transparent;
   margin-top: 50px;
-  /* position: absolute;
-  top: 40%;
-  left: 47%; */
 }
 
 
@@ -669,6 +674,7 @@ button {
   font-weight: 300;
   line-height: 20px;
   white-space: nowrap;
+  font-family: "NB Architekt";
 }
 
 .slick-next,
@@ -706,6 +712,7 @@ p {
   padding: 8px 24px;
   transition: 0.3s ease-in-out;
   white-space: nowrap;
+  font-family: "NB Architekt";
 }
 
 .btn_border {
@@ -742,6 +749,7 @@ p {
   line-height: 64px;
   text-transform: uppercase;
   margin-bottom: 8px;
+  font-family: "Blender Pro";
 }
 
 .tab_details h6 {
@@ -749,6 +757,7 @@ p {
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
+  font-family: "NB Architekt";
 }
 
 .tab_details p {
@@ -762,6 +771,7 @@ p {
   display: flex;
   align-items: center;
   gap: 8px;
+  font-family: "NB Architekt";
 }
 
 .tab_details p span {
@@ -783,6 +793,7 @@ p {
   background: var(--gray-50, #222826);
   padding: 8px 16px;
   border: none;
+  font-family: "NB Architekt";
 }
 
 .prize_bg {
@@ -804,9 +815,11 @@ p {
 
 .prize_list p:first-child {
   color: var(--gray-10, #DEECE4);
+  font-family: "Blender Pro";
   font-size: 22px;
   font-weight: 700;
   line-height: 30px;
+  margin-bottom: 0 !important;
 }
 
 .prize_list p:last-child {
@@ -814,6 +827,8 @@ p {
   font-size: 20px;
   font-weight: 400;
   line-height: 28px;
+  margin-bottom: 0 !important;
+  font-family: "NB Architekt";
 }
 
 .judges .judge_card {
@@ -846,6 +861,7 @@ p {
   font-weight: 400;
   line-height: 24px;
   text-transform: uppercase;
+  font-family: "NB Architekt";
 }
 
 
@@ -855,6 +871,7 @@ p {
   font-weight: 400;
   line-height: 20px;
   text-transform: uppercase;
+  font-family: "NB Architekt";
 }
 
 .support h1 {
@@ -864,6 +881,7 @@ p {
   font-weight: 700;
   line-height: 48px;
   margin-bottom: 113px;
+  font-family: "Blender Pro";
 }
 
 .support {
@@ -885,6 +903,7 @@ p {
   font-weight: 400;
   line-height: 24px;
   margin-bottom: 40px;
+  font-family: "NB Architekt";
 }
 
 .footer h1 {
@@ -893,6 +912,7 @@ p {
   font-weight: 700;
   line-height: 32px;
   margin-bottom: 40px;
+  font-family: "Blender Pro";
 }
 
 .footer p {
@@ -900,6 +920,7 @@ p {
   font-size: 14px;
   font-weight: 300;
   line-height: 20px;
+  font-family: "NB Architekt";
 }
 
 
