--- a/src/App.css
+++ b/src/App.css
@@ -96,7 +96,8 @@ button {
 .navbar-nav {
   gap: 32px;
   clip-path: polygon(7% 8%, 100% 9%, 100% 97%, 2% 97%, 2% 37%);
-  padding-left: 20px;
+  padding-left: 40px;
+  padding-top: 9px;
   background-color: #000;
   position: relative;
 }
@@ -141,7 +142,7 @@ button {
 
 
 .jointBtn {
-  padding: 10px 24px;
+  padding: 13px 25px;
   position: relative;
 }
 
